añadido almudena.html

--- a/almudena.html
+++ b/almudena.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     Hola, soy Almudena
+    <ul>
+        <li>Me gusta jugar al pádel y pickleball</li>
+        <li>Leer</li>
+        <li>Viajar</li>
+    </ul>
 </body>
 </html>
