Modificacion hobbies adolfo.html

--- a/adolfo.html
+++ b/adolfo.html
@@ -7,6 +7,12 @@
 </head>
 <body>
     Hola soy Adolfo
+    <br>Hobbies:
+    <ul>
+        <li>Futbol</li>
+        <li>Cine</li>
+        <li>Dibujar</li>
+    </ul>
     
 </body>
 </html>
