Añadido Hobbies Juan carlos

--- a/Juancarlos.html
+++ b/Juancarlos.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Juan carlos revueltas</title>
+    
 </head>
-<body>
-    Hola soy Juan carlos
+
+<body bgcolor="blue">
+    <h1 align = "center"><font size="80px" color="white">Hola Soy Juan carlos Revueltas</font></h1>
+    <h3><font color="white">HOBBIES</h3></font>
+    <ul type="square"><font color="white">
+        <li>Rutas en bici</li>
+        <li>Cocinar</li>
+        <li>Videojuegos</li>
+
+
+    </ul></font>
 </body>
 </html>
