añadido mikel.html

--- a/mikel.html
+++ b/mikel.html
@@ -9,3 +9,15 @@
 
 <body bgcolor="green">
     <h1 align = "center"><font size="80px" color="white">BUENAS SOY MIKEL BARBERENA</font></h1>
+    <body bgcolor="green">
+        <h1 align = "center"><font size="80px" color="white">BUENAS SOY MIKEL BARBERENA</font></h1>
+        <h3><font color="white">HOBBIES</h3></font>
+        <ul type="square"><font color="white">
+            <li>IR AL GIMNASIO</li>
+            <li>VIAJAR</li>
+            <li>JUGAR VIDEOJUEGOS</li>
+    
+    
+        </ul></font>
+    </body>
+    </html>
