--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
-#Ignorar el archivo de configuracion local
-configuracion_local.sh
-
-#Ignorar la carpeta de archivos privados
-archivos_privados/
-
-#Ignorar los archivos de photoshop y gimp
-*.xcf
-*.psd
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Modificado por Juan Carlos</title>
+    He modificado este archivo
+</head>
+<body>
+    
+</body>
+</html>
