pruebo a comitear porque me sale fallo

--- a/Cristina.html
+++ b/Cristina.html
@@ -13,17 +13,17 @@
     <h2>
         <font color="white" size="48px">Soy Cris, estudiante de primero de DAM</font>
     </h2>
-    <!-- <h3> -->
-        <!-- <font color="yellow" size="32px">Mis 3 hobbies son:</font> -->
-        <!-- <ul> <font color="white" size="16px"</font> -->
-            <!-- <li>Ver series y películas </li> -->
-            <!-- <li>Leer</li> -->
-            <!-- <li>Pasar tiempo con mi familia</li> -->
+    <h3>
+        <font color="yellow" size="32px">Mis 3 hobbies son:</font>
+        <ul> <font color="white" size="16px"</font>
+            <li>Ver series y películas </li>
+            <li>Leer</li>
+            <li>Pasar tiempo con mi familia</li>
         
-        <!-- </ul> -->
+        </ul>
 
 
 
-    <!-- </h3> -->
+    </h3>
 </body>
 </html>
