--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modificado por adolfo</title>
-    He modificado este archivo otra vez
+    <title>Me gustan los perros</title>
+    
 </head>
 <body>
     
