--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <title>Soy cris y me encantan los gatos</title>
     He modificado este archivo otra vez
-    <title> nos gustan los animales en general</title>
+    <title> nos gustan los animales en general menos los anfibios </title>
 </head>
 <body>
     
