he modificado el html de adolfo

--- a/adolfo.html
+++ b/adolfo.html
@@ -13,6 +13,6 @@
         <li>Cine</li>
         <li>Dibujar</li>
     </ul>
-    
+        Soy Almudena, se que te gusta git bash
 </body>
 </html>
